# internal/api/immerle/playlists.go
@@ -32,6 +32,7 @@ func (h *Handler) handlePublicPlaylists(w http.ResponseWriter, r *http.Request) 
 			"comment":    p.Comment,
 			"songCount":  p.SongCount,
 			"duration":   p.Duration,
+			"coverArt":   p.CoverArt,
 			"coverArts":  p.CoverArts,
 			"subscribed": subscribed,
 		})
